@@ -1,5 +1,16 @@
 2017-01-16  Lukas Kluft  <lukas.kluft@gmail.com>
 
+	* typhon/arts/griddedfield.py:
+
+	Fixed __eq__() to work with empty GriddedField objects (cases where gf.data
+	and gf.grids are None).
+
+	* typhon/arts/tests/test_griddedfield.py:
+
+	Added an equality test for empty GriddedFields.
+
+2017-01-16  Lukas Kluft  <lukas.kluft@gmail.com>
+
 	* typhon/plots/colors.py:
 
 	Added new function colors2cmap() to convert a given list of colors (named
